--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,10 +17,15 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
+
+// Typography Stlyes
 h1, h2 , h3 {
   font-family: 'Open Sans', sans-serif;
 }
 
+// Background Gradient
 .navbar, .home-callout {
   //Gradient provided by @_ighosh at uiGradients.com
   background: #56CCF2;  /* fallback for old browsers */
@@ -28,6 +33,7 @@ h1, h2 , h3 {
   background: linear-gradient(to right, #2F80ED, #56CCF2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+// Nav Styles
 .navbar{
   border: none;
 }
@@ -41,6 +47,7 @@ h1, h2 , h3 {
   }
 }
 
+// Home Page styles
 .home-callout {
   color: white;
   margin-top: -20px;
